<resources>
    <string name="app_name">SIROP</string>
    <string name="title_activity_login">LoginActivity</string>
    <!--    <string name="Operaciones">ComandanteActivity</string>-->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="inicio">Inicio</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="tipo_de_perfil">Tipo de perfil</string>
    <string name="contrase_a">Contraseña</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="seleccion_de_perfil">Seleccion de perfil</string>
    <string name="registrarme">Registrarme</string>
    <string name="usuario">Usuario</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="perfil_seleccionado">Perfil Seleccionado</string>
    <string name="registrar_usuario">Registrar Usuario</string>
    <string name="iniciar_sesion_desde_registro">Iniciar Sesion</string>
    <!--    <string name="operacionesList">Operaciones</string>-->
    <string name="division">Division</string>
    <string name="batallon">Batallón</string>
    <string name="caso">Caso</string>
    <string name="bienes">Bienes</string>
    <string name="fecha">Fecha</string>
    <string name="enemigo">Enemigo</string>
    <string name="total">Total</string>
    <string name="divisionPlain">Division</string>
    <string name="casoPlain">Caso</string>
    <string name="registrarBtnInfo">Registrar</string>
    <string name="totalPlain">Total</string>
    <string name="bienesPlain">Bienes</string>
    <string name="enemigoPlain">Enemigo</string>
    <string name="fechaPlain">Fecha</string>
    <string name="correo">Correo Electrónico</string>
    <string name="correoRegistro">Correo</string>
    <string name="contrasenaRegistro">Contrasena</string>
    <string name="registrar">Registrarse</string>
    <string name="already_have_account_signup">Already have account? <b>SignUp</b></string>
    <string name="emailSesion">Email</string>
    <string name="passwordSesion">Password</string>
    <string name="iniciar_sesion_button">Iniciar Sesion</string>
    <string name="nombreRegistro">nombreRegistro</string>
    <string name="already_have_account_login">Already have account? <b>LogIn</b></string>
    <!--    <string name="operaciones">Operaciones</string>-->
    <string name="lista_de_operaciones">Lista de Operaciones</string>
    <string name="lista_de_usuarios">Lista de Usuarios</string>
    <string name="batallonPlain">Batallon</string>
    <string name="correoCrud">Correo</string>
    <string name="contrasenaCrud">Contrasena</string>
    <string name="apellidoCrud">Apellido</string>
    <string name="nombreCrud">Nombre</string>
    <string name="crud_usuarios">CRUD Usuarios</string>
    <string name="crud_operacion">CRUD Operacion</string>
    <string name="crud_cerrar_sesion">Cerrar Sesion</string>
    <string-array name="perfiles">
        <item>Seleccione…</item>
        <item>Tratador</item>
        <item>Comandante</item>
    </string-array>
    <string name="title_activity_login_comandante">LoginComandanteActivity</string>
</resources>